--- a/DiServiceInstaller/DiServiceInstaller.csproj
+++ b/DiServiceInstaller/DiServiceInstaller.csproj
@@ -7,6 +7,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>DiServiceInstaller</Title>
     <Description>Adding services to dependency injection container in a cleaner and more maintainable way</Description>
+    <RepositoryUrl>https://github.com/M0BIN-V/DiServiceInstaller</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
